# abbsolve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_pypi.yml
abbsolve/cli/: cli.py
abbsolve/documents/: corpus.py
abbsolve/infer/: regex.py
abbsolve/utils/: regex.py
tests/: test_cli.py  test_corpus.py  test_regex.py
